Nabar Spacing & View Width Correction

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,7 +1,8 @@
 .container {
 	display: flex;
-	max-width: 2500px;
+	max-width: 100vw;
 	margin: 0px;
+	max-height: 100vh;
 }
 .content {
 	display: inline-block;
